Improve searching performance